# dialogos

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  architecture_rules.toml  pyproject.toml  requirements-dev.txt  talk_to_codex.py
.githooks/: commit-msg  pre-push
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
docs/agents/: new-session-handoff.md  roles.md  workflow.md
docs/dev/: architecture.md  business-rules.md  business-rules.toml  deferred-ideas.md  dependency-rules.md  patterns-deep-dive.md  patterns-quickstart.md  release-rc.md
docs/feature-requests/: 2026-03-10-single-enter-auto-stop.md
docs/user/: alpha-preview.md  capabilities.md  dependencies.md  feedback-template.md  quickstart.md
scripts/: alpha_preview.sh  business_rules.py  check_architecture.py  release_cli.py  reset_alpha_state.sh  validate_branch_name.sh
specs/: bug-gh-copilot-submit-delay.md  bug-parallel-tmux-target-collision.md  milestone-2-architecture.md  milestone-3-agent-first-hardening.md  milestone-4-single-enter-auto-stop.md  mvp-push-to-talk.md  push-to-talk-auto-stop-pause.md  release-readiness-docs-and-semantic-coverage.md  rename-silicato.md  runtime-profile-plugin-and-rc4-release.md  tmux-e2e-boundary-and-runner.md  ux-default-picker-and-short-flags.md
src/dialogos/: __init__.py  __main__.py  cli.py  config.py  contracts.py  logging_jsonl.py  orchestrator.py  tmux_picker.py
src/dialogos.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/silicato/: __init__.py
(+95 files in other folders)
