[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dialogos"
version = "0.1.0"
description = "Voice bridge for Linux users to talk to Codex."
requires-python = ">=3.12"
dependencies = ["faster-whisper>=1.1.0"]

[project.optional-dependencies]
dev = [
  "mypy>=1.11.0",
  "pytest>=8.3.0",
  "ruff>=0.6.0",
]

[project.scripts]
dialogos = "dialogos.cli:main"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "I",   # import sorting
  "UP",  # pyupgrade
  "B",   # bugbear
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.mypy]
python_version = "3.12"
files = ["src", "tests", "talk_to_codex.py"]
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
exclude = ["tests/architecture/fixtures/"]

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
markers = [
  "hardware: tests that require local audio/tmux hardware and runtime services",
]
pythonpath = ["src"]
